--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -37,6 +37,6 @@
     expand="block"
     style="text-transform: initial;"
     (click)="goToRegisterPage()"
-    ><b>Already have an account? Login here.</b></ion-button>
+    ><b>Didn't have an account? Register here.</b></ion-button>
 
 </ion-content>
