--- a/src/app/pages/add-friend/add-friend.page.html
+++ b/src/app/pages/add-friend/add-friend.page.html
@@ -10,7 +10,7 @@
     (ionChange)="setFilteredItems()"
     #mySearchbar
   ></ion-searchbar>
-  <ion-list>
+  <ion-list color="dark">
     <ion-item *ngFor="let orang of user" color="dark" class="item">
       <ion-avatar>
         <ion-img src="{{orang.imageUrl}}"></ion-img>
