--- a/src/app/pages/home-map/home-map.page.html
+++ b/src/app/pages/home-map/home-map.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content color="light">
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center; bg">
@@ -13,8 +13,7 @@
       </ion-col>
       <ion-col class="ion-text-center; bg">
         <ion-button expand="full" class="ion-text-wrap" (click)="centerMap()" fill="clear" color="light"
-          ><ion-icon name="locate-outline"></ion-icon
-        ></ion-button>
+          ><ion-icon name="navigate-outline"></ion-icon></ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
