--- a/src/app/pages/pages.page.html
+++ b/src/app/pages/pages.page.html
@@ -1,13 +1,13 @@
-<ion-tabs>
+<ion-tabs color="secondary">
   <ion-tab-bar slot="bottom" color="secondary">    
     <ion-tab-button tab="show-friends">
-      <ion-icon name="logo-wechat"></ion-icon>
-    </ion-tab-button>
-    <ion-tab-button tab="add-friend">
       <ion-icon name="people-circle-outline"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="add-friend">
+      <ion-icon name="person-add-outline"></ion-icon>
+    </ion-tab-button>
     <ion-tab-button tab="home-map">
-      <ion-icon name="image-outline"></ion-icon>
+      <ion-icon name="map-outline"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="profile-home">
       <ion-icon name="person-circle-outline"></ion-icon>
