--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,22 +1,30 @@
-<ion-header>
-  <ion-toolbar color="secondary">
-    <ion-title class="ion-text-center"> Hi, {{namaDepan}} {{namaBelakang}} ! </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content color="dark">
-  <ion-grid  color="dark">
-
-      <h3 class="ion-text-center"> Your email address: {{userEmail}} </h3>
-
-    <ion-col>
-      <ion-card *ngIf="photo">
-        <ion-card-content>
-          <img [src]="photo" />
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-    <ion-button expand="block" color="danger" (click)="logout()">Log Out</ion-button>
+  <ion-row *ngIf="photo" class="ion-justify-content-center">
+    <img [src]="photo" />
+  </ion-row>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-text-center">
+        Hi, {{namaDepan}} {{namaBelakang}} !
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-button (click)="logout()" expand="block" color="danger">
+        Log Out
+      </ion-button>
+    </ion-row>
   </ion-grid>
-  
+
+  <ion-grid>
+    <ion-item *ngFor="let data of myFeed" color="dark">
+      <ion-label>You logged in at: {{data.time| date:'mediumDate'}}</ion-label>
+      <ion-buttons>
+        <ion-button (click)="deleteFeed(data.key)"
+          ><ion-icon name="close-circle-outline"></ion-icon
+        ></ion-button>
+      </ion-buttons>
+    </ion-item>
+  </ion-grid>
+  <p>Kuliah online membunuhmu</p>    
+  <p>Created by: Edward 00000019274 </p>
 </ion-content>
