--- a/src/app/pages/home-map/home-map.page.html
+++ b/src/app/pages/home-map/home-map.page.html
@@ -1,6 +1,6 @@
-<ion-content color="light">
-  <ion-grid>
-    <ion-row>
+<ion-content color="light" class="bg">
+  <ion-grid color="light" class="bg">
+    <ion-row color="light" class="bg">
       <ion-col class="ion-text-center; bg">
         <ion-button
           expand="full"
