--- a/src/app/pages/show-friend/show-friend.page.html
+++ b/src/app/pages/show-friend/show-friend.page.html
@@ -18,8 +18,7 @@
       <ion-label>{{orang.nDepan}} {{orang.nBelakang}}</ion-label>
       <ion-buttons>
         <ion-button (click)="presentAlert(orang)"
-          ><ion-icon name="close-circle-outline"></ion-icon
-        ></ion-button>
+          ><ion-icon name="trash-outline"></ion-icon></ion-button>
       </ion-buttons>
     </ion-item>
   </ion-list>
